# src/docs/swagger.json
@@ -4,6 +4,52 @@
         "contact": {}
     },
     "paths": {
+        "/api/login": {
+            "post": {
+                "description": "login user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "new jwt data",
+                        "name": "UserForm",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/forms.Result"
+                        }
+                    },
+                    "460": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/forms.Result"
+                        }
+                    },
+                    "521": {
+                        "description": "Cannot create session",
+                        "schema": {
+                            "$ref": "#/definitions/forms.Result"
+                        }
+                    }
+                }
+            }
+        },
         "/api/signUp": {
             "post": {
                 "description": "sign in user",
@@ -50,7 +96,7 @@
                 }
             }
         },
-        "/api/signin": {
+        "/api/signout": {
             "post": {
                 "description": "sign in user",
                 "consumes": [
@@ -62,7 +108,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "SignIn",
+                "summary": "Logout",
                 "parameters": [
                     {
                         "description": "new jwt data",
@@ -96,9 +142,9 @@
                 }
             }
         },
-        "/api/signout": {
-            "post": {
-                "description": "sign in user",
+        "/api/v1/albums/": {
+            "put": {
+                "description": "updating album by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -106,17 +152,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "album"
                 ],
-                "summary": "SignOut",
+                "summary": "UpdateAlbum",
                 "parameters": [
                     {
-                        "description": "new jwt data",
-                        "name": "UserForm",
+                        "description": "id of updating album and params of it.",
+                        "name": "Album",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/forms.User"
+                            "$ref": "#/definitions/models.Album"
                         }
                     }
                 ],
@@ -124,19 +170,325 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/forms.Result"
+                            "$ref": "#/definitions/utils.Success"
                         }
                     },
-                    "460": {
+                    "400": {
                         "description": "Data is invalid",
                         "schema": {
-                            "$ref": "#/definitions/forms.Result"
+                            "$ref": "#/definitions/utils.Error"
                         }
                     },
-                    "521": {
-                        "description": "Cannot create session",
+                    "405": {
+                        "description": "Method is not allowed",
                         "schema": {
-                            "$ref": "#/definitions/forms.Result"
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "creating new album",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "summary": "CreateAlbum",
+                "parameters": [
+                    {
+                        "description": "params of new album. Id will be set automatically.",
+                        "name": "Album",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Album"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/albums/{id}": {
+            "get": {
+                "description": "getting album by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "summary": "GetAlbum",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of album which need to be getted",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Album"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "deleting album by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "summary": "DeleteAlbum",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of album which need to be deleted",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/artists/": {
+            "put": {
+                "description": "updating artist by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artist"
+                ],
+                "summary": "UpdateArtist",
+                "parameters": [
+                    {
+                        "description": "id of updating artist and params of it.",
+                        "name": "Artist",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Artist"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "creating new artist",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artist"
+                ],
+                "summary": "CreateArtist",
+                "parameters": [
+                    {
+                        "description": "params of new artist. Id will be set automatically.",
+                        "name": "Artist",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Artist"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/artists/{id}": {
+            "get": {
+                "description": "getting artist by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artist"
+                ],
+                "summary": "GetArtist",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of artist which need to be getted",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Artist"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "deleting album by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artist"
+                ],
+                "summary": "DeleteArtist",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of artist which need to be deleted",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "Data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method is not allowed",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
                         }
                     }
                 }
@@ -161,16 +513,90 @@
                     "example": "hello@example.com"
                 },
                 "id": {
-                    "type": "string",
-                    "example": "5125112"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Martin"
+                    "type": "integer",
+                    "example": 5125112
                 },
                 "password": {
                     "type": "string",
                     "example": "1fsgh2rfafas"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "Martin"
+                }
+            }
+        },
+        "models.Album": {
+            "type": "object",
+            "properties": {
+                "Date": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "authorId": {
+                    "type": "integer",
+                    "example": 121
+                },
+                "countLikes": {
+                    "type": "integer",
+                    "example": 54
+                },
+                "countListening": {
+                    "type": "integer",
+                    "example": 15632
+                },
+                "coverId": {
+                    "type": "integer",
+                    "example": 254
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 777
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Mercury"
+                }
+            }
+        },
+        "models.Artist": {
+            "type": "object",
+            "properties": {
+                "countFollowers": {
+                    "type": "integer",
+                    "example": 1001
+                },
+                "countListening": {
+                    "type": "integer",
+                    "example": 7654
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 43
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Imagine Dragons"
+                },
+                "photo": {
+                    "type": "string",
+                    "example": "/public/artists/photo/imagineDragons.png"
+                }
+            }
+        },
+        "utils.Error": {
+            "type": "object",
+            "properties": {
+                "err": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.Success": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "string"
                 }
             }
         }
